failures/clang_other_error_KG5GKz.i.stderr.txt
libsystemd-journal.c:1:41: error: expected ')'
obsolete_lib(sd_journal_print,libsystemd-journal);
                                        ^
libsystemd-journal.c:1:13: note: to match this '('
obsolete_lib(sd_journal_print,libsystemd-journal);
            ^
libsystemd-journal.c:1:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_journal_print,libsystemd-journal);
             ^
libsystemd-journal.c:2:42: error: expected ')'
obsolete_lib(sd_journal_printv,libsystemd-journal);
                                         ^
libsystemd-journal.c:2:13: note: to match this '('
obsolete_lib(sd_journal_printv,libsystemd-journal);
            ^
libsystemd-journal.c:2:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_journal_printv,libsystemd-journal);
             ^
libsystemd-journal.c:3:40: error: expected ')'
obsolete_lib(sd_journal_send,libsystemd-journal);
                                       ^
libsystemd-journal.c:3:13: note: to match this '('
obsolete_lib(sd_journal_send,libsystemd-journal);
            ^
libsystemd-journal.c:3:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_journal_send,libsystemd-journal);
             ^
libsystemd-journal.c:4:41: error: expected ')'
obsolete_lib(sd_journal_sendv,libsystemd-journal);
                                        ^
libsystemd-journal.c:4:13: note: to match this '('
obsolete_lib(sd_journal_sendv,libsystemd-journal);
            ^
libsystemd-journal.c:4:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_journal_sendv,libsystemd-journal);
             ^
libsystemd-journal.c:5:45: error: expected ')'
obsolete_lib(sd_journal_stream_fd,libsystemd-journal);
                                            ^
libsystemd-journal.c:5:13: note: to match this '('
obsolete_lib(sd_journal_stream_fd,libsystemd-journal);
            ^
libsystemd-journal.c:5:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_journal_stream_fd,libsystemd-journal);
             ^
libsystemd-journal.c:6:40: error: expected ')'
obsolete_lib(sd_journal_open,libsystemd-journal);
                                       ^
libsystemd-journal.c:6:13: note: to match this '('
obsolete_lib(sd_journal_open,libsystemd-journal);
            ^
libsystemd-journal.c:6:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_journal_open,libsystemd-journal);
             ^
libsystemd-journal.c:7:41: error: expected ')'
obsolete_lib(sd_journal_close,libsystemd-journal);
                                        ^
libsystemd-journal.c:7:13: note: to match this '('
obsolete_lib(sd_journal_close,libsystemd-journal);
            ^
libsystemd-journal.c:7:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_journal_close,libsystemd-journal);
             ^
libsystemd-journal.c:8:44: error: expected ')'
obsolete_lib(sd_journal_previous,libsystemd-journal);
                                           ^
libsystemd-journal.c:8:13: note: to match this '('
obsolete_lib(sd_journal_previous,libsystemd-journal);
            ^
libsystemd-journal.c:8:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_journal_previous,libsystemd-journal);
             ^
libsystemd-journal.c:9:40: error: expected ')'
obsolete_lib(sd_journal_next,libsystemd-journal);
                                       ^
libsystemd-journal.c:9:13: note: to match this '('
obsolete_lib(sd_journal_next,libsystemd-journal);
            ^
libsystemd-journal.c:9:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_journal_next,libsystemd-journal);
             ^
libsystemd-journal.c:10:49: error: expected ')'
obsolete_lib(sd_journal_previous_skip,libsystemd-journal);
                                                ^
libsystemd-journal.c:10:13: note: to match this '('
obsolete_lib(sd_journal_previous_skip,libsystemd-journal);
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
